# mobile_manipulation

./: .gitignore  README.md
A-star/: Makefile  info  main.cpp
A-star/assets/: info
A-star/include/: A_Star.hpp
ROS_Files/: build_and_launch.sh  info
ROS_Files/IRB_Mobile/MobileRobot/src/robot_motion/: CMakeLists.txt  package.xml
ROS_Files/IRB_Mobile/MobileRobot/src/robot_motion/action/: ArmControl.action  BaseControl.action
ROS_Files/IRB_Mobile/MobileRobot/src/robot_motion/launch/: map.launch.py
ROS_Files/IRB_Mobile/MobileRobot/src/robot_motion/map/: map.yaml  map_server_params.yaml
ROS_Files/IRB_Mobile/MobileRobot/src/robot_motion/src/: AStar.cpp  ArmController.cpp  Dyn_Manip.cpp  Dyn_Manip.h  GlobalPlannerOld.cpp  Integrated.cpp  LocalPlanner.cpp  Manipulability.cpp
ROS_Files/IRB_Mobile/MobileRobot/src/robot_motion/srv/: MapPath.srv
ROS_Files/IRB_Mobile/MobileRobot/src/robot_motion/utils/: controller_switch.cpp
ROS_Files/IRB_Mobile/MobileRobot/src/robotbody/: CMakeLists.txt  package.xml
ROS_Files/IRB_Mobile/MobileRobot/src/robotbody/ABB/urdf/: irb120.urdf.xacro  irb120_macro.urdf.xacro  irb120_transmission.xacro  irb120_without_gripper_macro.urdf
ROS_Files/IRB_Mobile/MobileRobot/src/robotbody/ABB/urdf/abb_resources/: common_materials.xacro
ROS_Files/IRB_Mobile/MobileRobot/src/robotbody/config/: irb120egp64_controller.yaml
ROS_Files/IRB_Mobile/MobileRobot/src/robotbody/launch/: robot.launch.py
ROS_Files/IRB_Mobile/MobileRobot/src/robotbody/urdf/: mobile_manipulator.sdf  mobile_manipulator.urdf  mobile_manipulator.urdf.xacro
ROS_Files/IRB_Mobile/MobileRobot/src/robotbody/urdf/mobile_base/: mobile_base.urdf
ROS_Files/IRB_Mobile/MobileRobot/src/robotbody/worlds/: irb120.world
ROS_Files/IRB_Mobile/matlab_files/: Info  manip.fig
ROS_Files/src/mobile_robot/: arm_base.urdf.xacro
ROS_Files/src/mobile_robot/mobile_base/: mobile_base.urdf
matlab_files/: DH.m  jacobian.m  untitled.m
